all: misc fixes and improvements
Two minor changes in this patch:

* Display the "SecureBoot" variable in the startup.nsh script

* Remove duplicate certificates from the UEFI db variable

Signed-off-by: Paul Moore <pmoore2@cisco.com>

--- a/keys/Makefile
+++ b/keys/Makefile
@@ -91,7 +91,7 @@ DB-rand.pem:
 	uuidgen -r > DB-rand.guid
 
 DB.esl: DB-ms.esl DB-extra.esl
-	cat $$(find . -name "DB-*.esl") > $@
+	cat $^ > $@
 
 DB-ms.esl: DB-ms
 	diff -q DB-ms/DB-ms.esl $@ || cp DB-ms/DB-ms.esl $@
