esp: generate the ESP fs dynamically using QEMU
Evidently QEMU can generate a FAT filesystem on the fly so we can do
away with all of the guestfish/fs_esp.img scripting.

Signed-off-by: Paul Moore <pmoore2@cisco.com>

--- a/make.conf
+++ b/make.conf
@@ -66,7 +66,7 @@ QEMU_CMD_CORE = \
 	  \
 	  -virtfs local,path=fs_virtfs,mount_tag=virtfs0,security_model=none \
 	  \
-	  -drive format=raw,file=fs_esp.img \
+	  -drive file=fat:rw:fs_esp,format=raw,media=disk \
 	  \
 	  -device virtio-net,netdev=nic -netdev user,id=nic
 
