qemu: use the longform "readonly=on" option
Resolve the following warning with QEMU v6.0.0:

  warning: short-form boolean option 'readonly' deprecated

Signed-off-by: Paul Moore <pmoore2@cisco.com>

--- a/make.conf
+++ b/make.conf
@@ -57,7 +57,7 @@ QEMU_CMD_CORE = \
 	  \
 	  -global ICH9-LPC.disable_s3=1 \
 	  -global driver=cfi.pflash01,property=secure,value=on \
-	  -drive if=pflash,format=raw,readonly,file=ovmf_fw.fd \
+	  -drive if=pflash,format=raw,readonly=on,file=ovmf_fw.fd \
 	  -drive if=pflash,format=raw,file=ovmf_vars.fd \
 	  \
 	  -chardev socket,id=chrtpm,path=.tpm2/swtpm-sock \
