--- a/make.conf
+++ b/make.conf
@@ -24,25 +24,35 @@ ARCH            = $(shell uname -m | sed s,i[3456789]86,ia32,)
 # efi lib/applications configuration
 #
 
-EFIINC = /usr/include/efi
-EFIINCS = -I${EFIINC} -I${EFIINC}/${ARCH} -I${EFIINC}/protocol
+EFI_INC = /usr/include/efi
+EFI_INCS = -I${EFI_INC} -I${EFI_INC}/${ARCH} -I${EFI_INC}/protocol
 
 LIB = /usr/lib
-EFILIB = ${LIB}
+EFI_LIB = ${LIB}
+EFI_LIBS = -lgnuefi -lefi
 
-EFI_CRT_OBJS = ${EFILIB}/crt0-efi-${ARCH}.o
-EFI_LDS = ${EFILIB}/elf_${ARCH}_efi.lds
+EFI_CRT_OBJS = ${EFI_LIB}/crt0-efi-${ARCH}.o
+EFI_LDS = ${EFI_LIB}/elf_${ARCH}_efi.lds
 
 CFLAGS = \
-	-Wall \
-	${EFIINCS} -fno-stack-protector -fpic -fshort-wchar -mno-red-zone
-ifeq ($(ARCH),x86_64)
-CFLAGS += -DEFI_FUNCTION_WRAPPER
-endif
+	-Wall ${EFI_INCS} \
+	-fpic -ffreestanding -fno-stack-protector -fno-stack-check \
+	-fshort-wchar -mno-red-zone -maccumulate-outgoing-args
 LDFLAGS = \
-	-shared \
-	-nostdlib -znocombreloc -T ${EFI_LDS} -Bsymbolic \
-	-L ${EFILIB} -L ${LIB} ${EFI_CRT_OBJS}
+	-shared -Bsymbolic \
+	-L ${EFI_LIB} -T ${EFI_LDS} ${EFI_CRT_OBJS}
+
+%.o: %.c
+	${CC} ${CFLAGS} -c $< -o $@
+
+%.so: %.o
+	${LD} ${LDFLAGS} $^ -o $@ ${EFI_LIBS}
+
+%.efi: %.so
+	objcopy \
+		-j .text -j .sdata -j .data -j .dynamic -j .dynsym  -j .rel \
+		-j .rela -j .rel.* -j .rela.* -j .reloc -j .sbat \
+		--target efi-app-x86_64 --subsystem=10 $< $@
 
 #
 # qemu/ovmf configuration
