use the ubuntu ovmf file paths if they exist
Signed-off-by: Serge Hallyn <serge@hallyn.com>

--- a/make.conf
+++ b/make.conf
@@ -58,8 +58,14 @@ LDFLAGS = \
 # qemu/ovmf configuration
 #
 
-OVMF_CODE = /usr/share/edk2-ovmf/x64/OVMF_CODE.secboot.fd
-OVMF_VARS = /usr/share/edk2-ovmf/x64/OVMF_VARS.fd
+OVMF_SEARCH = /usr/share/OVMF \
+	/usr/share/edk2-ovmf/x64 \
+	UNDEFINED
+
+OVMF_DIR ?= $(shell for d in $(OVMF_SEARCH); do [ -d "$$d" ] && break; done; echo $$d)
+
+OVMF_CODE = $(OVMF_DIR)/OVMF_CODE.secboot.fd
+OVMF_VARS = $(OVMF_DIR)/OVMF_VARS.fd
 
 QEMU_CMD_CORE = \
 	qemu-system-x86_64 \
